Пошук зображень по назві  в інпуті

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
         />
         <button type="submit">Search</button>
       </form>
-      <script src="./index.js"></script>
+      <div class="gallery"></div>
+      <div class = js-guard></div>
+      <script src="./index.js" type = module></script>
 </body>
 </html>
+
